2004-07-01  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcombobox.xml (Description) Fix typo.
	* pygtk-introduction.xml Fix broken link
	* pygtk-gtkentrycompletion.xml Fix typo.
	Fixes #145239 thanks to Olav Vitters

2004-06-30  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreesortable.xml (Description)
	(get_sort_column_id) (set_sort_func_id) Add more detail on the
	meaning and use of sort column IDs.

	* pygtk-gtktreesortable.xml (set_default_sort_func) Revise
	description of sort_func param. Change
	gtk.TREE_SORTABLE_DEFAULT_SORT_COLUMN_ID to -1.
	(set_sort_column_id) Change gtk.TREE_SORTABLE_DEFAULT_SORT_COLUMN_ID
	to -1.

2004-06-28  John Finlay  <finlay@moeraki.com>

	* pygtk-pygtkgenerictreemodel.xml (Properties) Add description
	of the "leak-references" property.

2004-06-20  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwidget.xml (allocation) (window) These attributes are
	writeable in PyGTK 2.4
	* pygtk-gtkwidget.xml
	* pygtk-gtk-functions.xml (widget_class_install_style_property)
	Add description of this PyGTK 2.4 function.

	* pygtk-gtkcontainer.xml
	* pygtk-gtk-functions.xml (container_class_list_child_properties)
	Add description of this PyGTK 2.4 function.

	* pygtk-gtkitemfactory.xml (Description) Add link to gtk.UIManager
	in the deprecation message. Thanks to Matthew Bull.

	* pygtk-gdkwindow.xml (set_user_data) (get_user_data) Add 
	description of these PyGTK 2.4 methods.

	* pygtk-gtknotebook.xml (insert_page) (set_tab_label) tab_label
	parameter can be None in PyGTK 2.4 and above.

	* pygtk-gtkwidget.xml ("drag-drop") Fix broken link.

	* pygtk-gtkaccelgroup.xml
	* pygtk-gtk-functions.xml (accel_groups_from_object) Add
	description of this PyGTK 2.4 function.

2004-06-14  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwidget.xml ("drag-motion") ("drag-leave") ("drag-end")
	("drag-drop") ("drag-data-received") ("drag-data-get")
	("drag-data-delete") ("drag-begin") Update the documentation on
	these signals.
