@@ -1,5 +1,10 @@
 2004-07-01  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gtknotebook.xml (append_page) (append_page_menu)
+	(prepend_page) (prepend_page_menu) (insert_page) (insert_page_menu)
+	(set_tab_label) (set_menu_label)
+	Describe default values for tab_label, menu_label and position params.
+
 	* pygtk-gtkcombobox.xml (Description) Fix typo.
 	* pygtk-introduction.xml Fix broken link
 	* pygtk-gtkentrycompletion.xml Fix typo.
